--- a/public/css/sb-admin.css
+++ b/public/css/sb-admin.css
@@ -465,7 +465,7 @@ body::-webkit-scrollbar-thumb, .side-nav::-webkit-scrollbar-thumb {
 #main-navbar {
 	overflow-y: scroll !important;
 	max-height: 300px !important;
-	font-size: 13px;
+	font-size: 12.6px !important;
 }
 
 .navbar-inverse {
