--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -69,14 +69,14 @@
 <script id='engaged-touchpoint-tpl' type="text/html" >
  <li class="list-group-item view" id="tp_<%- id %>">
    <div class="row">
-      <div class="col-md-2 text-center"> <i class="fa <%- faIcon %>" aria-hidden="true" style="font-size:1.6em" ></i> <br> <%- typeAsType %> </div>
+	  <div class="col-md-2 text-center" style="margin-top: 15px;" > <%- eventCount %> events </div>
       <div class="col-md-10">
          <small class="text-muted pull-right"> Updated: <%- updatedAt %> </small>
          <h5 class="media-heading"> <a target="_blank" href="<%- url %>" > <%- name %> </a> </h5>
          <div class="text-nowrap " >  
 			 <i class="fa fa-link" aria-hidden="true"></i> <span class="small"><%- truncatedUrl %></span> 
 		 </div>
- 		 <div class="text-nowrap" style="display: <%- cssStyleDisplay %>" >  
+ 		 <div class="text-nowrap" style="display: <%- cssShowLocationCode %>" >  
 			<i class="fa fa-map-marker" aria-hidden="true"></i>  
 			<span class="small" > Location at <a  href="javascript:eModal.iframe('https://plus.codes/<%- locationCode %>','Touchpoint Location')" > </a>  </span> 
 		 </div>
