--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-list.html
@@ -5,4 +5,14 @@
 	div.profile_medium_score { color:#1A529E!important;font-size:14px!important;}
 	div.profile_high_score { color:#3300ff!important;font-size:16px!important;}
 	.text-center { text-align: center!important; }
+	
+	div.datatable_row_checkbox {
+		font-size:1.3em!important; color:#3300ff!important;
+		cursor: pointer; height: 32px!important; width:52px!important; border-radius: 8px;
+	}
+	div.datatable_row_checkbox:hover {
+		background-color: #FFF8DC!important;
+		color: #EC4B0A!important;
+		font-size:1.5em;
+	}
 </style>
