update new features

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -397,7 +397,10 @@ setTimeout(function(){
 	                <input type="text" class="form-control" readonly value="" id="leoCdpApiTokenKey" >
 	                
 	                <label for="leoCdpApiTokenValue" class="highlight_text" > API Token Value (tokenValue) </label>
-				   <input type="text" class="form-control" readonly value="" id="leoCdpApiTokenValue" >
+				    <input type="text" class="form-control" readonly value="" id="leoCdpApiTokenValue" >
+				    
+				    <label for="leoCdpApiJourneyMapIdValue" class="highlight_text" > Journey Map ID (journeyMapId) </label>
+				    <input type="text" class="form-control" readonly value="" id="leoCdpApiJourneyMapIdValue" >
 	            </div>
 	            <hr>
 	            
