--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -391,15 +391,15 @@ setTimeout(function(){
 				<h4 class="modal-title text-center" > LEO CDP Observer API Information </h4>
 			</div>         
 			<div class="modal-body ">
-				<b> In the HTTP POST body, you should set the "tokenKey" for API Token Key and the "tokenValue" for API Token Value</b> <br>
+				<b> In the HTTP Header, you should set the "tokenkey" for API Token Key and the "tokenvalue" for API Token Value</b> <br>
 				<div class="form-group" >
-	                <label for="leoCdpApiTokenKey" class="highlight_text" > API Token Key (tokenKey) </label> 
+	                <label for="leoCdpApiTokenKey" class="highlight_text" > API Token Key ( tokenkey ) </label> 
 	                <input type="text" class="form-control" readonly value="" id="leoCdpApiTokenKey" >
 	                
-	                <label for="leoCdpApiTokenValue" class="highlight_text" > API Token Value (tokenValue) </label>
+	                <label for="leoCdpApiTokenValue" class="highlight_text" > API Token Value ( tokenvalue ) </label>
 				    <input type="text" class="form-control" readonly value="" id="leoCdpApiTokenValue" >
 				    
-				    <label for="leoCdpApiJourneyMapIdValue" class="highlight_text" > Journey Map ID (journeyMapId) </label>
+				    <label for="leoCdpApiJourneyMapIdValue" class="highlight_text" > Journey Map ID ( journeyMapId ) </label>
 				    <input type="text" class="form-control" readonly value="" id="leoCdpApiJourneyMapIdValue" >
 	            </div>
 	            <hr>
