update UI for API document

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -403,14 +403,16 @@ setTimeout(function(){
 				    <input type="text" class="form-control" readonly value="" id="leoCdpApiJourneyMapIdValue" >
 	            </div>
 	            <hr>
-	            
+	            <div class="alert alert-info" role="alert"> 
+	            	<a href="https://github.com/USPA-Technology/leo-cdp-api-examples" target="_blank"> <i class="fa fa-info-circle" aria-hidden="true"></i> Get example code here</a> 
+	            </div>
 				<label> To create a new profile or update an existed profile, call this API with HTTP POST: </label> <br>
 				<b id="leoCdpGetProfileApiUrl" class="highlight_text" >  </b> 
 				<hr>
-				<label> To track event for a specific profile, call this API with HTTP POST: </label> <br>
+				<label> To save a tracking event for a specific profile, call this API with HTTP POST: </label> <br>
 				<b id="leoCdpTrackEventApiUrl"  class="highlight_text" >  </b> <br>
 				<hr>
-				<label> To list all events in a specific profile, call this API with HTTP POST: </label> <br>
+				<label> To list all events in a specific profile, call this API with HTTP GET: </label> <br>
 				<b id="leoCdpListEventsApiUrl"  class="highlight_text" > </b> <br>
 				
 			</div>  
