fix bugs and upgrade for new features

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -217,7 +217,7 @@ function leoObserverProxyReady(session) {
 		<!-- Modal content-->
 		<div class="modal-content">   
 			<div class="modal-header">
-				<h4 class="modal-title text-center" > Please select a survey form or rating form to track CX data </h4>
+				<h4 class="modal-title text-center" > Please select a Survey Rating Form to collect feedback data or CX data </h4>
 			</div> 
 			  
 			<div class="modal-body">
