update and improve

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -64,6 +64,9 @@
 		font-weight: bold;
 		color: #3300ff!important;
 	} 
+	.event_matrix_active {
+		width: 100%; background-color: #e8e8e8; border-radius: 10px;
+	}
 </style>
 
 <script id='engaged-touchpoint-tpl' type="text/html" >
