fix bugs and add new features

--- a/public/css/leo-survey.css
+++ b/public/css/leo-survey.css
@@ -9,7 +9,7 @@
 }
 
 #survey_img {
-	margin:auto; max-height:250px; display: block;
+	margin: 15px auto; max-height:250px; display: block;
 }
 
 #location_code_url {
