--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -71,14 +71,15 @@ LeoObserver.recordEvent<%- eventMetricName %> = function(eventData) {
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(jsNode, s);
 })();
-LeoObserverProxy.synchLeoVisitorId(function(vid){
+
+var synchLeoCdpToGA4 = synchLeoCdpToGA4 || function (vid) {
 	window.dataLayer = window.dataLayer || []; 
 	dataLayer.push({ 'user_id': vid });
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 	gtag('set', 'user_id', vid);
 	gtag('config', '<%- measurementId %>');
-});
+};
 </script>
 
 <div class="modal fade" id="webDataObserverCodeDialog" role="dialog">
@@ -154,6 +155,10 @@ function leoObserverProxyReady(session) {
 				aNode.href = hrefUrl;
 			}
 		});
+		
+		if(typeof window.synchLeoCdpToGA4 === "function") {
+			synchLeoCdpToGA4(vid)
+		}
 	});
 }
 				</textarea></div>
