upgrade and improve system

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -18,6 +18,10 @@
 	.observer_name, .touchpoint_hub_name {
 		color: #3300ff;
 	}
+	
+	.tphub_text_label {
+		font-size:13.3px!important; stroke:#BB2649; font-weight:lighter; word-spacing: 1px;
+	}
 </style>
 
 <!-- Templates for customer-journey-flow.html -->
