--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -15,10 +15,9 @@
 	.observer_url a {
 	    color: #3300ff!important;
 	}
-	.observer_name, .touchpoint_hub_name {
+	.jsgrid-grid-body .observer_name, .jsgrid-grid-body .touchpoint_hub_name {
 		color: #3300ff;
 	}
-	
 	.tphub_text_label {
 		font-size:13.3px!important; stroke:#BB2649; font-weight:lighter; word-spacing: 1px;
 	}
