update journey map report

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -19,7 +19,7 @@
 		color: #3300ff;
 	}
 	.tphub_text_label {
-		font-size:13.3px!important; stroke:#BB2649; font-weight:lighter; word-spacing: 1px;
+		font-size:13.3px!important; stroke:#566573; font-weight:lighter; word-spacing: 1px;
 	}
 </style>
 
