--- a/resources/app-templates/leocdp-admin/templates/tpl-analytics-dashboard.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-analytics-dashboard.html
@@ -41,7 +41,7 @@ div.download_link_holder {
 	padding: 4px!important; 
 }
 .chosen-container {
-	z-index: 100!important;
+	z-index: 100;
 }
 .cy-panzoom {
 	z-index: 1!important;
