improve UI, backend to search profile better

--- a/resources/app-templates/leocdp-admin/templates/tpl-analytics-dashboard.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-analytics-dashboard.html
@@ -41,7 +41,10 @@ div.download_link_holder {
 	padding: 4px!important; 
 }
 .chosen-container {
-	z-index: 100;
+	z-index: 100!important;
+}
+.chosen-with-drop {
+	z-index: 101!important;
 }
 .cy-panzoom {
 	z-index: 1!important;
