--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -247,7 +247,7 @@
 
 
 <script id='recommended-content-tpl' type="text/html" >
- <div class="list-group-item col-md-12" id="content_item_<%- key %>" data-key="<%- key %>" >
+ <div class="list-group-item col-md-12" id="content_item_<%- key %>" data-key="<%- key %>" style="cursor:pointer" title="Drag and drop to update item ranking" data-assetgroupid="<%- assetGroupIds[0] %>" >
 	<div class="col-md-2 text-center" > 
 		<img alt="Content Image" class="rounded mx-auto d-block item-headline-img" src="<%- content.headlineImageUrl %>" onerror="this.src = NO_IMAGE_URL" > 
 	</div>
@@ -279,7 +279,7 @@
 </script>
 
 <script id='recommended-product-tpl' type="text/html" >
- <div class="list-group-item col-md-12" id="product_item_<%- key %>" data-key="<%- key %>" style="cursor:pointer" title="Drag and drop to update item ranking" >
+ <div class="list-group-item col-md-12" id="product_item_<%- key %>" data-key="<%- key %>" style="cursor:pointer" title="Drag and drop to update item ranking" data-assetgroupid="<%- assetGroupIds[0] %>" >
 	<div class="col-md-2 text-center"> 
 		<img alt="Product Image" class="rounded mx-auto d-block item-headline-img" src="<%- product.headlineImageUrl %>" onerror="this.src = NO_IMAGE_URL" > 
 	</div>
